samples/_failures_safe/1761222060_0877d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fcbc61f8.c: In function ‘main’:
./samples/SAFE/__tmp_fcbc61f8.c:134:12: error: missing terminating " character
  134 |     printf("========================
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fcbc61f8.c:134:5: error: expected expression at end of input
  134 |     printf("========================
      |     ^~~~~~
./samples/SAFE/__tmp_fcbc61f8.c:134:5: error: expected declaration or statement at end of input
